--- a/index.html
+++ b/index.html
@@ -89,6 +89,22 @@
         }
         }
 
+        function checkAndDispatch(store, action) {
+            if(action.type === 'ADD_TODO' &&
+               action.todo.name.toLowerCase().includes('bitcoin'))
+            {
+                return alert("Nope. That'a bad idea.")
+            }
+
+            if(action.type === 'ADD_GOAL' &&
+               action.goal.name.toLowerCase().includes('bitcoin'))
+            {
+                return alert("Nope. That'a bad idea.")
+            }
+
+            store.dispatch(action);
+        }
+
         const store = Redux.createStore(Redux.combineReducers({
             todos,
             goals
@@ -110,7 +126,7 @@
             const name = input.value;
             input.value = '';
 
-            store.dispatch(addTodoAction({
+            checkAndDispatch(store, addTodoAction({
                 id: generateId(),
                 name,
                 complete: false
@@ -122,7 +138,7 @@
             const name = input.value;
             input.value = '';
 
-            store.dispatch(addGoalAction({
+            checkAndDispatch(store, addGoalAction({
                 id: generateId(),
                 name
             }));
@@ -142,14 +158,14 @@
             const node = document.createElement('li');
             const text = document.createTextNode(todo.name);
             const removeBtn = createRemoveButton(() => {
-                store.dispatch(removeTodoAction(todo.id));
+                checkAndDispatch(store, removeTodoAction(todo.id));
             });
             node.appendChild(text);
             node.appendChild(removeBtn);
 
             node.style.textDecoration = todo.complete ? 'line-through' : 'none';
             node.addEventListener('click', () => {
-                store.dispatch(toggleTodoAction(todo.id));
+                checkAndDispatch(store, toggleTodoAction(todo.id));
             });
 
             document.getElementById('todos').appendChild(node);
@@ -159,7 +175,7 @@
             const node = document.createElement('li');
             const text = document.createTextNode(goal.name);
             const removeBtn = createRemoveButton(() => {
-                store.dispatch(removeGoalAction(goal.id));
+                checkAndDispatch(store, removeGoalAction(goal.id));
             });
             node.appendChild(text);
             node.appendChild(removeBtn);
