--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         }
         }
 
-        function checkAndDispatch(store, action) {
+        const checker = (store) => (next) => (action) => {
             if(action.type === 'ADD_TODO' &&
-               action.todo.name.toLowerCase().includes('bitcoin'))
+                action.todo.name.toLowerCase().includes('bitcoin'))
             {
                 return alert("Nope. That'a bad idea.")
             }
@@ -102,13 +102,13 @@
                 return alert("Nope. That'a bad idea.")
             }
 
-            store.dispatch(action);
+            next(action);
         }
 
         const store = Redux.createStore(Redux.combineReducers({
             todos,
             goals
-        }));
+        }), Redux.applyMiddleware(checker));
 
         store.subscribe(() => {
             const { goals, todos } = store.getState();
@@ -126,7 +126,7 @@
             const name = input.value;
             input.value = '';
 
-            checkAndDispatch(store, addTodoAction({
+            store.dispatch(addTodoAction({
                 id: generateId(),
                 name,
                 complete: false
@@ -138,7 +138,7 @@
             const name = input.value;
             input.value = '';
 
-            checkAndDispatch(store, addGoalAction({
+            store.dispatch(addGoalAction({
                 id: generateId(),
                 name
             }));
@@ -158,14 +158,14 @@
             const node = document.createElement('li');
             const text = document.createTextNode(todo.name);
             const removeBtn = createRemoveButton(() => {
-                checkAndDispatch(store, removeTodoAction(todo.id));
+                store.dispatch(removeTodoAction(todo.id));
             });
             node.appendChild(text);
             node.appendChild(removeBtn);
 
             node.style.textDecoration = todo.complete ? 'line-through' : 'none';
             node.addEventListener('click', () => {
-                checkAndDispatch(store, toggleTodoAction(todo.id));
+                store.dispatch(toggleTodoAction(todo.id));
             });
 
             document.getElementById('todos').appendChild(node);
@@ -175,7 +175,7 @@
             const node = document.createElement('li');
             const text = document.createTextNode(goal.name);
             const removeBtn = createRemoveButton(() => {
-                checkAndDispatch(store, removeGoalAction(goal.id));
+                store.dispatch(removeGoalAction(goal.id));
             });
             node.appendChild(text);
             node.appendChild(removeBtn);
