--- a/index.html
+++ b/index.html
@@ -213,11 +213,29 @@
         }
 
         class Todos extends React.Component {
+            addItem = (e) => {
+                e.preventDefault();
+
+                const name = this.input.value;
+                this.input.value = '';
+
+                this.props.store.dispatch(addTodoAction({
+                    name,
+                    complete: false,
+                    id: generateId()
+                    }))
+                }
+
             render () {
                 return (
                     <div>
-                        TODOS
-
+                        <h1>Todo List</h1>
+                        <input 
+                            type='text'
+                            placeholder='Add Todo'
+                            ref={(input) => this.input = input}
+                        />
+                        <button onClick={this.addItem}>Add Todo</button>
                         <List />
                     </div>
                 );
@@ -240,7 +258,7 @@
             render () {
                 return (
                     <div>
-                        <Todos />
+                        <Todos store={this.props.store}/>
                         <Goals />
                     </div>
                 );
@@ -248,7 +266,7 @@
         }
 
         ReactDOM.render(
-            <App />,
+            <App store={store}/>,
             document.getElementById('app')
         )
     </script>
