Lists with React and Redux

--- a/index.html
+++ b/index.html
@@ -205,9 +205,16 @@
         function List (props) {
             return (
                 <ul>
-                    <li>
-                        LIST
-                    </li>
+                    {props.items.map(item => (
+                        <li key={item.id}>
+                            <span>
+                                {item.name}
+                            </span>
+                            <button onClick={() => {props.remove(item)}}>
+                                X    
+                            </button>
+                        </li>
+                    ))}
                 </ul>
             );
         }
@@ -226,6 +233,10 @@
                     }))
                 }
 
+            removeItem = (todo) => {
+                this.props.store.dispatch(removeTodoAction(todo.id));
+            }
+
             render () {
                 return (
                     <div>
@@ -236,7 +247,7 @@
                             ref={(input) => this.input = input}
                         />
                         <button onClick={this.addItem}>Add Todo</button>
-                        <List />
+                        <List remove={this.removeItem} items={this.props.todos} />
                     </div>
                 );
             }
@@ -255,6 +266,10 @@
                 }))
             }
 
+            removeItem = (goal) => {
+                this.props.store.dispatch(removeGoalAction(goal.id));
+            }
+
             render() {
                 return (
                     <div>
@@ -265,7 +280,7 @@
                             ref={(input) => this.input = input}
                         />
                         <button onClick={this.addGoal}>Add Goal</button>
-                        <List />
+                        <List remove={this.removeItem} items={this.props.goals} />
                     </div>
                 );
             }
