--- a/index.html
+++ b/index.html
@@ -9,19 +9,6 @@
   <script src="https://tylermcginnis.com/goals-todos-api/index.js"></script>
 </head>
 <body>
-    <div>
-        <h1>Todo List</h1>
-        <input id='todo' type='text' placeholder='Add Todo' />
-        <button id='todoBtn'>Add Todo</button>
-        <ul id='todos'></ul>
-    </div>
-    <div>
-        <h1>Goals</h1>
-        <input id='goal' type='text' placeholder='Add Goal' />
-        <button id='goalBtn'>Add Goal</button>
-        <ul id='goals'></ul>
-    </div>
-    <hr />
     <div id='app'></div>
     <script type='text/javascript'>
         function generateId () {
@@ -126,79 +113,6 @@
             todos,
             goals
         }), Redux.applyMiddleware(checker, logger));
-
-        store.subscribe(() => {
-            const { goals, todos } = store.getState();
-
-            document.getElementById('goals').innerHTML = '';
-            document.getElementById('todos').innerHTML = '';
-
-            goals.forEach(addGoalToDOM);
-            todos.forEach(addTodoToDOM);   
-        });
-
-        // DOM Code
-        function addTodo(){
-            const input = document.getElementById('todo');
-            const name = input.value;
-            input.value = '';
-
-            store.dispatch(addTodoAction({
-                id: generateId(),
-                name,
-                complete: false
-            }));
-        }
-
-        function addGoal(){
-            const input = document.getElementById('goal');
-            const name = input.value;
-            input.value = '';
-
-            store.dispatch(addGoalAction({
-                id: generateId(),
-                name
-            }));
-        }
-
-        document.getElementById('todoBtn').addEventListener('click', addTodo);
-        document.getElementById('goalBtn').addEventListener('click', addGoal);
-
-        function createRemoveButton(onClick){
-            const removeBtn = document.createElement('button');
-            removeBtn.innerHTML = 'X';
-            removeBtn.addEventListener('click',onClick);
-            return removeBtn;
-        }
-
-        function addTodoToDOM(todo) {
-            const node = document.createElement('li');
-            const text = document.createTextNode(todo.name);
-            const removeBtn = createRemoveButton(() => {
-                store.dispatch(removeTodoAction(todo.id));
-            });
-            node.appendChild(text);
-            node.appendChild(removeBtn);
-
-            node.style.textDecoration = todo.complete ? 'line-through' : 'none';
-            node.addEventListener('click', () => {
-                store.dispatch(toggleTodoAction(todo.id));
-            });
-
-            document.getElementById('todos').appendChild(node);
-        }
-
-        function addGoalToDOM(goal) {
-            const node = document.createElement('li');
-            const text = document.createTextNode(goal.name);
-            const removeBtn = createRemoveButton(() => {
-                store.dispatch(removeGoalAction(goal.id));
-            });
-            node.appendChild(text);
-            node.appendChild(removeBtn);
-
-            document.getElementById('goals').appendChild(node);
-        }
     </script>
 
     <script type='text/babel'>
@@ -207,7 +121,9 @@
                 <ul>
                     {props.items.map(item => (
                         <li key={item.id}>
-                            <span>
+                            <span
+                                onClick={() => props.toggle && props.toggle(item.id)}
+                                style={{textDecoration : item.complete ? 'line-through' : 'none'}}>
                                 {item.name}
                             </span>
                             <button onClick={() => {props.remove(item)}}>
@@ -237,6 +153,10 @@
                 this.props.store.dispatch(removeTodoAction(todo.id));
             }
 
+            toggleItem = (id) => {
+                this.props.store.dispatch(toggleTodoAction(id));
+            }
+
             render () {
                 return (
                     <div>
@@ -247,7 +167,11 @@
                             ref={(input) => this.input = input}
                         />
                         <button onClick={this.addItem}>Add Todo</button>
-                        <List remove={this.removeItem} items={this.props.todos} />
+                        <List 
+                            toggle={this.toggleItem}
+                            remove={this.removeItem} 
+                            items={this.props.todos} 
+                        />
                     </div>
                 );
             }
