--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         const TOGGLE_TODO = 'TOGGLE_TODO'
         const ADD_GOAL = 'ADD_GOAL'
         const REMOVE_GOAL = 'REMOVE_GOAL'
+        const RECEIVE_DATA = 'RECEIVE_DATA'
 
         function addTodoAction (todo) {
         return {
@@ -57,6 +58,14 @@
         }
         }
 
+        function receiveDataAction (todos, goals) {
+        return {
+            type: RECEIVE_DATA,
+            todos,
+            goals
+        }
+        }
+
         function todos(state = [], action) {
         switch (action.type) {
             case ADD_TODO :
@@ -66,6 +75,8 @@
             case TOGGLE_TODO :
             return state.map((todo) => todo.id !== action.id ? todo : 
                 Object.assign({}, todo, { complete: !todo.complete }))
+            case RECEIVE_DATA :
+            return action.todos
             default :
             return state;
         }
@@ -77,6 +88,8 @@
             return state.concat([action.goal])
             case REMOVE_GOAL :
             return state.filter((goal) => goal.id !== action.id)
+            case RECEIVE_DATA :
+            return action.goals
             default :
             return state;
         }
@@ -218,8 +231,7 @@
                     API.fetchTodos(),
                     API.fetchGoals()
                 ]).then(([todos, goals]) => {
-                    console.log('Todos',todos);
-                    console.log('Goals',goals);
+                    store.dispatch(receiveDataAction(todos,goals));
                 })
 
                 store.subscribe(() => this.forceUpdate())
