Optimistically Deleting / Toggling Items

--- a/index.html
+++ b/index.html
@@ -174,10 +174,22 @@
 
             removeItem = (todo) => {
                 this.props.store.dispatch(removeTodoAction(todo.id));
+
+                return API.deleteTodo(todo.id)
+                    .catch(() => {
+                        this.props.store.dispatch(addTodoAction(todo));
+                        alert('An error occurred. Try again.');
+                    });
             }
 
             toggleItem = (id) => {
                 this.props.store.dispatch(toggleTodoAction(id));
+
+                return API.saveTodoToggle(id)
+                    .catch(() => {
+                        this.props.store.dispatch(toggleTodoAction(id));
+                        alert('An error occurred. Try again.');
+                    });
             }
 
             render () {
@@ -215,6 +227,12 @@
 
             removeItem = (goal) => {
                 this.props.store.dispatch(removeGoalAction(goal.id));
+
+                return API.removeGoal(goal)
+                    .then(() => {
+                        this.props.store.dispatch(addGoalAction(goal));
+                        alert('An error occurred. Try again.');
+                    });
             }
 
             render() {
