--- a/index.html
+++ b/index.html
@@ -162,14 +162,12 @@
             addItem = (e) => {
                 e.preventDefault();
 
-                const name = this.input.value;
-                this.input.value = '';
-
-                this.props.store.dispatch(addTodoAction({
-                    name,
-                    complete: false,
-                    id: generateId()
-                    }))
+                API.saveTodo(this.input.value)
+                    .then((todo) => {
+                        this.props.store.dispatch(addTodoAction(todo));
+                        this.input.value = '';
+                    })
+                    .catch(() => alert('An error occurred. Try again.'))
                 }
 
             removeItem = (todo) => {
@@ -216,20 +214,19 @@
             addGoal = (e) => {
                 e.preventDefault();
 
-                const name = this.input.value;
-                this.input.value = '';
-
-                this.props.store.dispatch(addGoalAction({
-                    id: generateId(),
-                    name
-                }))
+                API.saveGoal(this.input.value)
+                    .then((goal) => {
+                        this.props.store.dispatch(addGoalAction(goal));
+                        this.input.value = '';
+                    })
+                    .catch(() => alert('An error occurred. Try again.'))
             }
 
             removeItem = (goal) => {
                 this.props.store.dispatch(removeGoalAction(goal.id));
 
-                return API.removeGoal(goal)
-                    .then(() => {
+                return API.deleteGoal(goal)
+                    .catch(() => {
                         this.props.store.dispatch(addGoalAction(goal));
                         alert('An error occurred. Try again.');
                     });
