--- a/index.html
+++ b/index.html
@@ -72,12 +72,35 @@
             return (dispatch) => {
                 dispatch(removeTodoAction(todo.id));
 
-                return API.deleteGoal(goal)
+                return API.deleteTodo(todo)
                     .catch(() => {
-                        this.props.store.dispatch(addGoalAction(goal));
+                        dispatch(addTodoAction(todo));
                         alert('An error occurred. Try again.');
                     });
             }      
+        }
+
+        function handleAddTodo (name, cb) {
+            return (dispatch) => {
+                return API.saveTodo(name)
+                        .then((todo) => {
+                            dispatch(addTodoAction(todo));
+                            cb();
+                        })
+                        .catch(() => alert('An error occurred. Try again.'))
+            }
+        }
+
+        function handleToggleTodo (id) {
+            return (dispatch) => {
+                dispatch(toggleTodoAction(id));
+
+                return API.saveTodoToggle(id)
+                    .catch(() => {
+                        dispatch(toggleTodoAction(id));
+                        alert('An error occurred. Try again.');
+                    });
+            }
         }
 
         function handleAddGoal (name, cb) {
@@ -199,26 +222,18 @@
             addItem = (e) => {
                 e.preventDefault();
 
-                API.saveTodo(this.input.value)
-                    .then((todo) => {
-                        this.props.store.dispatch(addTodoAction(todo));
-                        this.input.value = '';
-                    })
-                    .catch(() => alert('An error occurred. Try again.'))
-                }
+                this.props.store.dispatch(handleAddTodo(
+                    this.input.value,
+                    () => this.input.value = ''
+                ))
+            }
 
             removeItem = (todo) => {
-                this.props.store.dispatch(handleDeleteToDo(todo.id));
+                this.props.store.dispatch(handleDeleteToDo(todo));
             }
 
             toggleItem = (id) => {
-                this.props.store.dispatch(toggleTodoAction(id));
-
-                return API.saveTodoToggle(id)
-                    .catch(() => {
-                        this.props.store.dispatch(toggleTodoAction(id));
-                        alert('An error occurred. Try again.');
-                    });
+                this.props.store.dispatch(handleToggleTodo(id));
             }
 
             render () {
