--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
         }
 
         const checker = (store) => (next) => (action) => {
-            if(action.type === 'ADD_TODO' &&
+            if(action.type === ADD_TODO &&
                 action.todo.name.toLowerCase().includes('bitcoin'))
             {
                 return alert("Nope. That'a bad idea.")
             }
 
-            if(action.type === 'ADD_GOAL' &&
+            if(action.type === ADD_GOAL &&
                action.goal.name.toLowerCase().includes('bitcoin'))
             {
                 return alert("Nope. That'a bad idea.")
